# frankenbote

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  pyproject.toml
.gitea/workflows/: release.yaml  tests.yml
assets/: style.css
config/: filter.yaml  sections.yaml  sources.yaml
src/frankenbote/: __init__.py  __main__.py  _debug.py  body_fetcher.py  cli.py  config.py  curator.py  fetcher.py  filter.py  models.py  publisher.py  renderer.py  selector.py  storage.py  summarizer.py
templates/: edition.html.j2  index.html.j2
tests/: conftest.py  test_body_fetcher.py  test_config.py  test_curator.py  test_fetcher.py  test_filter.py  test_models.py  test_renderer.py  test_selector.py  test_storage.py  test_summarizer.py
tests/fixtures/: sample_feed.xml
